--- a/client/src/styles/_settings.scss
+++ b/client/src/styles/_settings.scss
@@ -15,8 +15,8 @@ $font-1: "font-1", sans-serif;
 $font-2: "font-2", serif;
 $font-3: "font-3", serif;
 
-$color-1: #ff7b77;
-$color-2: #ffd0c4;
+$color-1: #6237d6;
+$color-2: #dad4f0;
 $color-3: rgb(0, 22, 44);
 $color-4: #fdeeee;
 $black: rgb(40, 40, 40);
